syntax = "proto3";

package command;

import "motor.proto";
import "sensor.proto";

message CommandRx {
    optional motor.MotorRx left_motor = 1;
    optional motor.MotorRx right_motor = 2;
}

message CommandTx {
    optional motor.MotorTx left_motor = 1;
    optional motor.MotorTx right_motor = 2;
    optional sensor.Mpu6050Tx mpu6050 = 3;
}